kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easysplit-ingress
  namespace: easysplit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.easysplit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easysplit-frontend-svc
                port:
                  number: 80
    - host: backend.easysplit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easysplit-backend-svc
                port:
                  number: 8080
